--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,9 @@
-.idea
-/vendor/
-node_modules/
-npm-debug.log
-yarn-error.log
+.idea/
+build/
+vendor/
 
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
-
-# Laravel 5 & Lumen specific with changed public path
-public_html/storage
-public_html/hot
-
-storage/*.key
-.env
-Homestead.yaml
-Homestead.json
-/.vagrant
-.phpunit.result.cache
+*.cache
+*.clover
+*.orig
 
 composer.lock
