--- a/.github/workflows/laravel-7.yml
+++ b/.github/workflows/laravel-7.yml
@@ -8,7 +8,7 @@ jobs:
         strategy:
             fail-fast: true
             matrix:
-                php: [ "7.3", "7.4", "8.0" ]
+                php: [ "7.4", "8.0" ]
                 laravel: [ "7.0" ]
 
         name: PHP ${{ matrix.php }}
