--- a/.github/workflows/laravel-8.yml
+++ b/.github/workflows/laravel-8.yml
@@ -8,7 +8,7 @@ jobs:
         strategy:
             fail-fast: true
             matrix:
-                php: [ "7.3", "7.4", "8.0", "8.1" ]
+                php: [ "7.4", "8.0", "8.1" ]
                 laravel: [ "8.0" ]
 
         name: PHP ${{ matrix.php }}
