--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "illuminate/routing": "^6.0 || ^7.0 || ^8.0 || ^9.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0 || ^6.0 || ^7.0",
+        "orchestra/testbench": "^4.0 || ^5.0 || ^6.0 || ^7.0",
         "phpunit/phpunit": "^9.5"
     },
     "minimum-stability": "stable",
