--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,10 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "fig/http-message-util": "^1.1",
-        "illuminate/routing": "^6.0 || ^7.0 || ^8.0 || ^9.0"
+        "illuminate/routing": "^7.0 || ^8.0 || ^9.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^4.0 || ^5.0 || ^6.0 || ^7.0",
+        "orchestra/testbench": "^5.0 || ^6.0 || ^7.0",
         "phpunit/phpunit": "^9.5"
     },
     "minimum-stability": "stable",
