Transferring the exclusion list to a configuration file

--- a/composer.json
+++ b/composer.json
@@ -48,5 +48,12 @@
         },
         "preferred-install": "dist",
         "sort-packages": true
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "DragonCode\\LaravelRouteNames\\ServiceProvider"
+            ]
+        }
     }
 }
