--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "illuminate/routing": "^7.0 || ^8.0 || ^9.0"
     },
     "require-dev": {
+        "dragon-code/extended-routes": "^3.1",
         "orchestra/testbench": "^5.0 || ^6.0 || ^7.0",
         "phpunit/phpunit": "^9.5"
     },
