--- a/composer.json
+++ b/composer.json
@@ -42,12 +42,12 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "fig/http-message-util": "^1.1",
-        "illuminate/routing": "^7.0 || ^8.0 || ^9.0"
+        "illuminate/routing": "^7.0 || ^8.0 || ^9.0 || ^10.0"
     },
     "require-dev": {
         "dragon-code/extended-routes": "^3.1",
-        "orchestra/testbench": "^5.0 || ^6.0 || ^7.0",
-        "phpunit/phpunit": "^9.5"
+        "orchestra/testbench": "^5.0 || ^6.0 || ^7.0 || ^8.0",
+        "phpunit/phpunit": "^9.6"
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
