--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
         "illuminate/routing": "^7.0 || ^8.0 || ^9.0 || ^10.0 || ^11.0"
     },
     "require-dev": {
-        "dragon-code/extended-routes": "^3.2",
+        "dragon-code/extended-routes": "^3.2 || ^4.0",
         "orchestra/testbench": "^5.0 || ^6.0 || ^7.0 || ^8.0 || ^9.0",
         "phpunit/phpunit": "^9.6 || ^10.0"
     },
