--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -49,4 +49,4 @@ body:
     -   type: markdown
         attributes:
             value: |
-                ❤️ The Dragon Code? Please consider supporting our collective: https://github.com/sponsors/TheDragonCode
+                ❤️ The Dragon Code? Please consider supporting our collective on [Boosty](https://boosty.to/dragon-code).
