--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -1,35 +1,9 @@
-name: code-style
+name: Code Style
 
-on:
-    push:
-    pull_request:
+on: [ push, pull_request ]
 
 permissions: write-all
 
 jobs:
     check:
-        if: ${{ ! (github.event_name == 'push' && github.ref == 'refs/heads/main') }}
-
-        runs-on: ubuntu-latest
-
-        steps:
-            -   name: Checkout code
-                uses: actions/checkout@v4
-
-            -   name: Checking PHP Syntax
-                uses: TheDragonCode/codestyler@v5
-    
-    fix:
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-        
-        runs-on: ubuntu-latest
-
-        steps:
-            -   name: Checkout code
-                uses: actions/checkout@v4
-
-            -   name: Checking PHP Syntax
-                uses: TheDragonCode/codestyler@v5
-                with:
-                    github_token: ${{ secrets.COMPOSER_TOKEN }}
-                    fix: true
+        uses: TheDragonCode/.github/.github/workflows/code-style.yml@main
