test(route): add route name extender tests
- Add extended routes to the test router
- Implement RouteNameExtender class for route name modification
- Create ExtendedRoutesTest to verify route name behavior with different configurations
- Update TestCase to include extended routes in the routing setup

--- a/composer.json
+++ b/composer.json
@@ -69,5 +69,9 @@
                 "DragonCode\\LaravelRouteNames\\ServiceProvider"
             ]
         }
+    },
+    "scripts": {
+        "test": "@php vendor/bin/phpunit --coverage-text",
+        "test-coverage": "@test --coverage-html=.build/phpunit/"
     }
 }
