--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -9,53 +9,8 @@ jobs:
         strategy:
             fail-fast: true
             matrix:
-                php: [ "7.4", "8.0", "8.1", "8.2", "8.3", "8.4" ]
-                laravel: [ "7.0", "8.0", "9.0", "10.0", "11.0", "12.0" ]
-                exclude:
-                    -   laravel: "7.0"
-                        php: "8.1"
-
-                    -   laravel: "7.0"
-                        php: "8.2"
-
-                    -   laravel: "7.0"
-                        php: "8.3"
-
-                    -   laravel: "7.0"
-                        php: "8.4"
-
-                    -   laravel: "9.0"
-                        php: "7.4"
-
-                    -   laravel: "9.0"
-                        php: "8.3"
-
-                    -   laravel: "9.0"
-                        php: "8.4"
-
-                    -   laravel: "10.0"
-                        php: "7.4"
-
-                    -   laravel: "10.0"
-                        php: "8.0"
-
-                    -   laravel: "11.0"
-                        php: "7.4"
-
-                    -   laravel: "11.0"
-                        php: "8.0"
-
-                    -   laravel: "11.0"
-                        php: "8.1"
-
-                    -   laravel: "12.0"
-                        php: "7.4"
-
-                    -   laravel: "12.0"
-                        php: "8.0"
-
-                    -   laravel: "12.0"
-                        php: "8.1"
+                php: [ "8.2", "8.3", "8.4" ]
+                laravel: [ "10.0", "11.0", "12.0" ]
 
         name: PHP ${{ matrix.php }}, Laravel ${{ matrix.laravel }}
 
@@ -74,4 +29,4 @@ jobs:
                 run: composer require --dev laravel/framework:^${{ matrix.laravel }}
 
             -   name: Execute tests
-                run: sudo vendor/bin/phpunit
+                run: sudo composer test
