--- a/composer.json
+++ b/composer.json
@@ -34,11 +34,11 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "fig/http-message-util": "^1.1",
-        "illuminate/routing": "^7.0 || ^8.0 || ^9.0 || ^10.0 || ^11.0 || ^12.0"
+        "illuminate/routing": "^10.0 || ^11.0 || ^12.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0 || ^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0",
-        "phpunit/phpunit": "^9.6 || ^10.0 || ^11.0 || ^12.0"
+        "orchestra/testbench": "^8.0 || ^9.0 || ^10.0",
+        "phpunit/phpunit": "^11.0 || ^12.0"
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
@@ -71,7 +71,7 @@
         }
     },
     "scripts": {
-        "test": "@php vendor/bin/phpunit --coverage-text",
-        "test-coverage": "@test --coverage-html=.build/phpunit/"
+        "test": "@php vendor/bin/phpunit",
+        "test-coverage": "@test --coverage-text --coverage-html=.build/phpunit/"
     }
 }
