--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.2",
         "fig/http-message-util": "^1.1",
         "illuminate/routing": "^10.0 || ^11.0 || ^12.0"
     },
