--- a/.gitattributes
+++ b/.gitattributes
@@ -3,9 +3,11 @@
 .github export-ignore
 
 tests export-ignore
+workbench export-ignore
 
 .editorconfig export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 
 phpunit.xml export-ignore
+testbench.yaml export-ignore
