--- a/composer.json
+++ b/composer.json
@@ -34,11 +34,11 @@
     "require": {
         "php": "^8.2",
         "fig/http-message-util": "^1.1",
-        "illuminate/routing": "^10.0 || ^11.0 || ^12.0"
+        "illuminate/routing": "^11.0 || ^12.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^8.0 || ^9.0 || ^10.0",
-        "phpunit/phpunit": "^10.0 || ^11.0 || ^12.0"
+        "orchestra/testbench": "^9.0 || ^10.0",
+        "phpunit/phpunit": "^11.0 || ^12.0"
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
