--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     },
     "require-dev": {
         "orchestra/testbench": "^9.0 || ^10.0",
-        "phpunit/phpunit": "^11.0 || ^12.0"
+        "pestphp/pest": "^3.8",
+        "pestphp/pest-plugin-type-coverage": "^3.5"
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
@@ -58,6 +59,7 @@
             "dragon-code/codestyler": true,
             "ergebnis/composer-normalize": true,
             "friendsofphp/php-cs-fixer": true,
+            "pestphp/pest-plugin": true,
             "symfony/thanks": true
         },
         "preferred-install": "dist",
@@ -78,7 +80,7 @@
         "build": "@php vendor/bin/testbench workbench:build --ansi",
         "clear": "@php vendor/bin/testbench package:purge-skeleton --ansi",
         "prepare": "@php vendor/bin/testbench package:discover --ansi",
-        "test": "@php vendor/bin/phpunit",
-        "test-coverage": "@test --coverage-text --coverage-html=.build/phpunit/"
+        "test": "@php vendor/bin/pest --compact",
+        "test-coverage": "@test --type-coverage"
     }
 }
