Added parallel testing

--- a/composer.json
+++ b/composer.json
@@ -80,7 +80,7 @@
         "build": "@php vendor/bin/testbench workbench:build --ansi",
         "clear": "@php vendor/bin/testbench package:purge-skeleton --ansi",
         "prepare": "@php vendor/bin/testbench package:discover --ansi",
-        "test": "@php vendor/bin/pest --compact",
-        "test-coverage": "@test --type-coverage"
+        "test": "@php vendor/bin/pest --parallel",
+        "test-coverage": "@php vendor/bin/pest --type-coverage"
     }
 }
